--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Features Section -->
     <section class="py-20 bg-gray-900">
         <div class="container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-16">Why AI Agentopia?</h2>
+            <h2 class="text-4xl font-bold text-center mb-16">Why Choose AI Agentopia?</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
                 <!-- Feature 1 -->
                 <div class="text-center">
@@ -113,17 +113,41 @@
     <!-- Footer -->
     <footer class="bg-gray-900 py-12">
         <div class="container mx-auto px-4">
-            <div class="flex justify-center space-x-6 mb-8">
-                <a href="#" class="social-icon text-2xl">🐦</a>
-                <a href="#" class="social-icon text-2xl">💬</a>
-                <a href="#" class="social-icon text-2xl">📧</a>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
+                <!-- About -->
+                <div class="text-center md:text-left">
+                    <h3 class="text-xl font-semibold mb-4 text-amber-400">About Agentopia</h3>
+                    <p class="text-gray-400">
+                        Building the future of AI agents through open collaboration and innovation.
+                    </p>
+                </div>
+                <!-- Quick Links -->
+                <div class="text-center">
+                    <h3 class="text-xl font-semibold mb-4 text-amber-400">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li><a href="/agents.html" class="text-gray-400 hover:text-amber-400">Agents</a></li>
+                        <li><a href="/resources.html" class="text-gray-400 hover:text-amber-400">Resources</a></li>
+                        <li><a href="https://github.com/Agentopia" class="text-gray-400 hover:text-amber-400">GitHub</a></li>
+                    </ul>
+                </div>
+                <!-- Connect -->
+                <div class="text-center md:text-right">
+                    <h3 class="text-xl font-semibold mb-4 text-amber-400">Connect</h3>
+                    <div class="flex justify-center md:justify-end space-x-4">
+                        <a href="https://github.com/Agentopia" target="_blank" class="text-gray-400 hover:text-amber-400">
+                            GitHub
+                        </a>
+                    </div>
+                </div>
             </div>
-            <p class="text-gray-400 text-center mb-4">
-                2024 AI Agentopia. Building the future of AI Agents.
-            </p>
-            <div class="text-center space-x-4">
-                <a href="#" class="text-sm text-gray-500 hover:text-sky-400">Privacy Policy</a>
-                <a href="#" class="text-sm text-gray-500 hover:text-sky-400">Terms of Service</a>
+            <div class="border-t border-gray-800 pt-8">
+                <p class="text-gray-400 text-center mb-4">
+                    2024 AI Agentopia. All rights reserved.
+                </p>
+                <div class="text-center space-x-4">
+                    <a href="https://github.com/Agentopia/agentopia.github.io/blob/main/LICENSE" class="text-sm text-gray-500 hover:text-amber-400">License</a>
+                    <a href="https://github.com/Agentopia/agentopia.github.io/blob/main/CODE_OF_CONDUCT.md" class="text-sm text-gray-500 hover:text-amber-400">Code of Conduct</a>
+                </div>
             </div>
         </div>
     </footer>
