--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta property="twitter:image" content="https://agentopia.github.io/images/og-image.png">
 
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/navigation.css">
     <!-- Add Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -40,7 +41,7 @@
 
         <!-- Hero Content -->
         <div class="relative z-10 text-center px-4">
-            <h1 class="text-6xl md:text-7xl font-bold mb-6 text-transparent bg-clip-text bg-gradient-to-r from-amber-400 to-orange-500">
+            <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold mb-6 text-transparent bg-clip-text bg-gradient-to-r from-amber-400 to-orange-500">
                 AI Agentopia
             </h1>
             <p class="text-2xl md:text-3xl text-amber-200 mb-8">A Happy Place for AI Agents</p>
