--- a/agents.html
+++ b/agents.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Agents - AI Agentopia</title>
     <meta name="description" content="Discover and explore AI agents in the Agentopia ecosystem. Find the perfect AI agent for your needs.">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+    <link rel="manifest" href="site.webmanifest">
+    
     <link rel="stylesheet" href="css/styles.css">
     <!-- Add Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -17,12 +22,30 @@
         }
     </script>
 </head>
-<body class="dark-mode">
+<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col">
     <!-- Navigation will be included via JavaScript -->
     <div id="nav-placeholder"></div>
 
-    <main class="container mx-auto px-4 py-8 pt-32">
-        <h1 class="text-4xl font-bold text-center mb-8">AI Agents Gallery</h1>
+    <!-- Hero Section -->
+    <section class="relative pt-32 pb-24 mb-12 overflow-hidden bg-gradient-to-br from-gray-900 via-sky-900 to-gray-900">
+        <div class="absolute inset-0" style="background-image: url('images/hero-pattern.svg'); opacity: 0.1;"></div>
+        <div class="container mx-auto px-4">
+            <div class="max-w-3xl mx-auto text-center">
+                <h1 class="text-5xl font-bold mb-8 leading-relaxed bg-gradient-to-r from-amber-400 to-amber-200 bg-clip-text text-transparent">
+                    AI Agents Gallery
+                </h1>
+                <p class="text-xl text-gray-300 mb-12">
+                    Discover and explore our curated collection of AI agents. Find the perfect agent to enhance your workflow and boost productivity.
+                </p>
+                <div class="flex justify-center space-x-4">
+                    <a href="#browse-agents" class="px-6 py-3 bg-amber-500 hover:bg-amber-600 text-gray-900 font-semibold rounded-lg transition-colors duration-300">Browse Agents</a>
+                    <a href="#categories" class="px-6 py-3 border border-amber-500 text-amber-400 hover:bg-amber-500/10 font-semibold rounded-lg transition-colors duration-300">View Categories</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <main class="container mx-auto px-4 py-12" id="browse-agents">
         <!-- Filters -->
         <div class="mb-8">
             <div class="flex flex-wrap gap-4 justify-center">
@@ -50,10 +73,10 @@
         </div>
     </main>
 
+    <!-- Footer will be included via JavaScript -->
     <div id="footer-placeholder"></div>
 
     <script src="js/navigation.js"></script>
     <script src="js/theme.js"></script>
-    <script src="js/footer.js"></script>
 </body>
 </html>
