--- a/resources.html
+++ b/resources.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources - AI Agentopia</title>
     <meta name="description" content="Access development resources, documentation, and tools for the AI Agentopia ecosystem.">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+    <link rel="manifest" href="site.webmanifest">
+    
     <link rel="stylesheet" href="css/styles.css">
     <!-- Add Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="dark-mode">
+<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col">
     <!-- Navigation will be included via JavaScript -->
     <div id="nav-placeholder"></div>
 
@@ -176,11 +181,10 @@
         </div>
     </main>
 
+    <!-- Footer will be included via JavaScript -->
     <div id="footer-placeholder"></div>
 
     <script src="js/navigation.js"></script>
     <script src="js/theme.js"></script>
-    <script src="js/repos.js"></script>
-    <script src="js/footer.js"></script>
 </body>
 </html>
