--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
     <div id="nav-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="relative min-h-screen flex items-center justify-center overflow-hidden bg-gradient-to-br from-gray-900 via-sky-900 to-gray-900 dark:from-gray-900 dark:via-sky-900 dark:to-gray-900 light:from-white light:via-sky-100 light:to-white">
+    <section class="relative min-h-[70vh] flex items-center justify-center overflow-hidden bg-gradient-to-br from-gray-900 via-sky-900 to-gray-900 dark:from-gray-900 dark:via-sky-900 dark:to-gray-900 light:from-white light:via-sky-100 light:to-white">
         <!-- Background Animation -->
         <div class="absolute inset-0">
             <div class="absolute inset-0 bg-grid-pattern opacity-10"></div>
         </div>
 
         <!-- Hero Content -->
-        <div class="relative z-10 text-center px-4">
-            <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold mb-8 md:mb-12 leading-normal md:leading-normal text-transparent bg-clip-text bg-gradient-to-r from-amber-400 to-orange-500 py-2">
+        <div class="relative z-10 text-center px-4 pt-12">
+            <h1 class="text-3xl sm:text-4xl md:text-6xl font-bold mb-6 md:mb-8 leading-normal md:leading-normal text-transparent bg-clip-text bg-gradient-to-r from-amber-400 to-orange-500 py-2">
                 AI Agentopia
             </h1>
-            <p class="text-2xl md:text-3xl text-amber-200 dark:text-amber-200 light:text-amber-600 mb-8">A Happy Place for AI Agents</p>
-            <p class="text-xl text-gray-400 dark:text-gray-400 light:text-gray-600 max-w-2xl mx-auto mb-12">
+            <p class="text-xl md:text-2xl text-amber-200 dark:text-amber-200 light:text-amber-600 mb-6">A Happy Place for AI Agents</p>
+            <p class="text-lg text-gray-400 dark:text-gray-400 light:text-gray-600 max-w-2xl mx-auto mb-10">
                 Discover, create, and collaborate with AI agents in the world's most innovative ecosystem.
             </p>
             <div class="flex flex-wrap justify-center gap-4">
