feat: Complete comprehensive documentation pages
- Created Getting Started Guide with structured sections on agent categories and development steps
- Developed API Reference with authentication, endpoints, and usage examples
- Completed Best Practices guide with sections on:
  - Tool Integration
  - Security Considerations
  - Testing Strategies
  - Ethical Guidelines
  - Performance Optimization
- Added 'Back to Resources' navigation links to all documentation pages
- Updated resources.html with consistent amber styling for titles and icons
- Updated project documentation in CHANGELOG.md and CONTEXT.md

--- a/resources.html
+++ b/resources.html
@@ -92,39 +92,39 @@
                 <h2 class="text-2xl font-bold mb-4 bg-gradient-to-r from-amber-400 to-amber-200 bg-clip-text text-transparent">Documentation</h2>
                 <ul class="space-y-4">
                     <li>
-                        <a href="docs/getting-started.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
+                        <a href="tools/getting-started.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
                             <div class="flex items-center justify-between">
                                 <div>
-                                    <h3 class="font-semibold mb-1">Getting Started Guide</h3>
+                                    <h3 class="font-semibold mb-1 text-amber-400">Getting Started Guide</h3>
                                     <p class="text-sm text-gray-400">Learn the basics of building AI agents</p>
                                 </div>
-                                <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <svg class="w-5 h-5 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                                 </svg>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="docs/api-reference.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
+                        <a href="tools/api-reference.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
                             <div class="flex items-center justify-between">
                                 <div>
-                                    <h3 class="font-semibold mb-1">API Reference</h3>
+                                    <h3 class="font-semibold mb-1 text-amber-400">API Reference</h3>
                                     <p class="text-sm text-gray-400">Complete API documentation and examples</p>
                                 </div>
-                                <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <svg class="w-5 h-5 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                                 </svg>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="docs/best-practices.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
+                        <a href="tools/best-practices.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
                             <div class="flex items-center justify-between">
                                 <div>
-                                    <h3 class="font-semibold mb-1">Best Practices</h3>
+                                    <h3 class="font-semibold mb-1 text-amber-400">Best Practices</h3>
                                     <p class="text-sm text-gray-400">Guidelines for building effective agents</p>
                                 </div>
-                                <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <svg class="w-5 h-5 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                                 </svg>
                             </div>
@@ -141,10 +141,10 @@
                         <a href="tools/sdk.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
                             <div class="flex items-center justify-between">
                                 <div>
-                                    <h3 class="font-semibold mb-1">SDK Downloads</h3>
+                                    <h3 class="font-semibold mb-1 text-amber-400">SDK Downloads</h3>
                                     <p class="text-sm text-gray-400">Official SDKs for multiple languages</p>
                                 </div>
-                                <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <svg class="w-5 h-5 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                                 </svg>
                             </div>
@@ -154,10 +154,10 @@
                         <a href="tools/cli.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
                             <div class="flex items-center justify-between">
                                 <div>
-                                    <h3 class="font-semibold mb-1">CLI Tools</h3>
+                                    <h3 class="font-semibold mb-1 text-amber-400">CLI Tools</h3>
                                     <p class="text-sm text-gray-400">Command-line tools for automation</p>
                                 </div>
-                                <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <svg class="w-5 h-5 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                                 </svg>
                             </div>
@@ -167,10 +167,10 @@
                         <a href="tools/templates.html" class="block text-gray-300 hover:text-amber-400 transition-colors">
                             <div class="flex items-center justify-between">
                                 <div>
-                                    <h3 class="font-semibold mb-1">Templates</h3>
+                                    <h3 class="font-semibold mb-1 text-amber-400">Templates</h3>
                                     <p class="text-sm text-gray-400">Starter templates and boilerplates</p>
                                 </div>
-                                <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <svg class="w-5 h-5 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                                 </svg>
                             </div>
