--- a/pages/agent-detail.html
+++ b/pages/agent-detail.html
@@ -97,19 +97,26 @@
           <div class="flex flex-col md:flex-row md:items-center gap-2 md:gap-3">
             <h1 id="agent-name" class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-white"></h1>
             <div class="flex items-center justify-center md:justify-start gap-2">
-              <span id="agent-category" class="px-2.5 py-0.5 text-sm font-medium bg-amber-100 dark:bg-gray-700 text-amber-800 dark:text-amber-300 rounded-full border border-amber-200 dark:border-gray-600"></span>
               <span id="agent-version" class="px-2 py-0.5 text-xs font-medium bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md border border-gray-200 dark:border-gray-600"></span>
             </div>
           </div>
           <p id="agent-description" class="mt-2 text-base text-gray-600 dark:text-gray-300 max-w-3xl"></p>
           <div class="mt-3 flex flex-wrap gap-2 justify-center md:justify-start" id="agent-tags"></div>
+          <!-- New Attributes Badges -->
+          <div class="mt-3 flex flex-wrap gap-2 justify-center md:justify-start" id="agent-attributes-badges">
+            <!-- JS will populate category, subcategory, agentType, agentScale here as badges -->
+          </div>
           <div class="mt-4 flex flex-wrap gap-3 justify-center md:justify-start">
             <a id="demo-link" href="#" target="_blank" class="hidden px-5 py-2.5 bg-amber-600 hover:bg-amber-700 text-white font-medium rounded-lg transition-all duration-300 flex items-center shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
               <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"></path>
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 10l4.545-1.818M10 10v3.636M10 10L5.455 8.182M10 10l4.545 1.818m0 0l4.545 1.818M14.545 11.818L10 13.636m0 0L5.455 11.818m4.545 1.818V17.273m0-3.636l4.545-1.818M5.455 11.818l-2.273-0.909M7.727 7.273l2.273 0.909M12 4.545l-2.273 0.909M14.545 6.364L10 4.545"></path>
               </svg>
               Try Demo
+            </a>
+            <a id="agent-source-link" href="#" target="_blank" 
+               class="hidden items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 dark:bg-gray-500 dark:hover:bg-gray-600 dark:focus:ring-offset-gray-800 transition-all duration-150 ease-in-out">
+              <svg class="w-5 h-5 mr-2 -ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg>
+              View Sourcecode
             </a>
             <a id="source-link" href="#" target="_blank" class="hidden px-5 py-2.5 bg-white dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600 text-gray-700 dark:text-white font-medium rounded-lg transition-all duration-300 flex items-center border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
               <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -163,7 +170,8 @@
             <a href="#configuration" class="nav-link px-4 py-3 border-l-4 border-transparent hover:bg-gray-50 dark:hover:bg-gray-700/30 text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400">Configuration</a>
             <a href="#use-cases" class="nav-link px-4 py-3 border-l-4 border-transparent hover:bg-gray-50 dark:hover:bg-gray-700/30 text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400">Use Cases</a>
             <a href="#requirements" class="nav-link px-4 py-3 border-l-4 border-transparent hover:bg-gray-50 dark:hover:bg-gray-700/30 text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400">Requirements</a>
-            <a href="#roadmap" class="nav-link px-4 py-3 border-l-4 border-transparent hover:bg-gray-50 dark:hover:bg-gray-700/30 text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400">Roadmap</a>
+            <a href="#roadmap" class="nav-link px-4 py-3 border-l-4 border-transparent hover:bg-gray-50 dark:hover:bg-gray-700/30 text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400">Roadmap Features</a>
+            <a href="#technical-details" class="nav-link px-4 py-3 border-l-4 border-transparent hover:bg-gray-50 dark:hover:bg-gray-700/30 text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400">Technical Details</a>
             <a href="#llm-privacy" class="nav-link px-4 py-3 border-l-4 border-transparent hover:bg-gray-50 dark:hover:bg-gray-700/30 text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400">LLM & Privacy</a>
             <a href="#docker" class="nav-link px-4 py-3 border-l-4 border-transparent hover:bg-gray-50 dark:hover:bg-gray-700/30 text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400">Docker Info</a>
           </nav>
@@ -241,13 +249,13 @@
           </h2>
           <div id="setup-section" class="prose dark:prose-invert max-w-none bg-gray-50 dark:bg-gray-700/30 p-6 rounded-lg"></div>
           <div class="mt-6 flex space-x-4">
-            <a id="demo-link" href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500" style="display: none;">
+            <a id="setup-demo-link" href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500" style="display: none;">
               <svg class="-ml-1 mr-2 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 15l-2 5L9 9l11 4-5 2zm0 0l5 5M7.188 2.239l.777 2.897M5.136 7.965l-2.898-.777M13.95 4.05l-2.122 2.122m-5.657 5.656l-2.12 2.122"></path>
               </svg>
               Try Demo
             </a>
-            <a id="source-link" href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:hover:bg-gray-600" style="display: none;">
+            <a id="setup-source-link" href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:hover:bg-gray-600" style="display: none;">
               <svg class="-ml-1 mr-2 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
               </svg>
@@ -298,6 +306,44 @@
           <ul id="agent-roadmap-features" class="list-disc pl-5 space-y-2 text-gray-700 dark:text-gray-300">
             <!-- JS will populate this -->
           </ul>
+        </section>
+
+        <!-- Technical Details Section -->
+        <section id="technical-details" class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 mb-8">
+          <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-6 flex items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mr-2 text-primary-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17 14v6m-3-3h6M3 10h2a2 2 0 002-2V6a2 2 0 00-2-2H3c-1.1 0-2 .9-2 2v2c0 1.1.9 2 2 2zm0 0v6a2 2 0 002 2h2a2 2 0 002-2v-2a2 2 0 00-2-2H3zM3 6l6-4l6 4M3 6v2m6-2v2m0-2l6-4m-6 4v2" />
+            </svg>
+            Technical Details
+          </h2>
+          <div class="space-y-6">
+            <div>
+              <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-100 mb-2">Development Frameworks</h3>
+              <div id="development-frameworks-list" class="flex flex-wrap gap-2">
+                <!-- JS will populate this as badges -->
+              </div>
+              <p id="development-frameworks-empty" class="text-gray-500 dark:text-gray-400 italic hidden">N/A</p>
+            </div>
+            <div>
+              <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-100 mb-2">Intended Audience</h3>
+              <div id="intended-audience-list" class="flex flex-wrap gap-2">
+                <!-- JS will populate this as badges -->
+              </div>
+              <p id="intended-audience-empty" class="text-gray-500 dark:text-gray-400 italic hidden">N/A</p>
+            </div>
+            <div>
+              <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-100 mb-2">Data Modalities</h3>
+              <div id="data-modalities-list" class="flex flex-wrap gap-2">
+                <!-- JS will populate this as badges -->
+              </div>
+              <p id="data-modalities-empty" class="text-gray-500 dark:text-gray-400 italic hidden">N/A</p>
+            </div>
+            <div>
+              <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-100 mb-2">Integration Type</h3>
+              <p id="integration-type-text" class="text-gray-700 dark:text-gray-300"></p>
+              <p id="integration-type-empty" class="text-gray-500 dark:text-gray-400 italic hidden">N/A</p>
+            </div>
+          </div>
         </section>
 
         <!-- LLM Dependency & Privacy Section -->
@@ -364,7 +410,6 @@
         </section>
       </div>
     </div>
-  </div>
   </div>
   
   <!-- Footer will be included via JavaScript -->
